<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.basketpall.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_activity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/ordinary_margin"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeMessage"
            android:textColor="@color/team1Color"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/basketPall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:fontFamily="@font/arcade"
            android:text="@string/basketPaLL"
            android:textColor="#EF5350"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:textColor="@color/team2Color"
            android:textSize="22sp" />

        <Button
            android:id="@+id/enter_button"
            android:layout_width="@dimen/ordinary_button_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="#EF5350"
            android:text="@string/enter_button"
            android:textColor="@color/buttonText" />

    </LinearLayout>

</FrameLayout>
