<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/enter_team_page" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/ordinary_margin">

        <TextView
            android:id="@+id/enter_team1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arcade_italic"
            android:inputType="textPersonName"
            android:text="@string/enterTeam1"
            android:textColor="@color/team1Color"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/edit_text_team1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_hint"
            android:inputType="textPersonName|textCapWords"
            android:maxLength="7"
            android:textColorHint="@color/buttonText" />

        <TextView
            android:id="@+id/enter_team2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/arcade_italic"
            android:text="@string/enterTeam2"
            android:textColor="@color/team2Color"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/edit_text_team2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_hint"
            android:inputType="textPersonName|textCapWords"
            android:maxLength="7"
            android:textColorHint="@color/buttonText" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="@dimen/ordinary_button_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@color/colorAccent"
            android:text="@string/play_button"
            android:textColor="@color/buttonText" />

    </LinearLayout>

</FrameLayout>
