<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/score_count_page" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/team1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/ordinary_margin"
                        android:fontFamily="@font/arcade_italic"
                        android:gravity="center"
                        android:text="@string/team1"
                        android:textColor="@color/team1Color"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/team1_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/ordinary_margin"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/team1Score"
                        android:textSize="40sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/two_Points_Button_Player1"
                            android:layout_width="@dimen/round_button_size"
                            android:layout_height="@dimen/round_button_size"
                            android:layout_margin="@dimen/round_button_margin"
                            android:background="@drawable/basketball"
                            android:onClick="add2PointsTeam1"
                            android:text="2"
                            android:textColor="@color/buttonText"
                            android:textSize="22sp" />

                        <Button
                            android:id="@+id/three_Points_Button_Player1"
                            android:layout_width="@dimen/round_button_size"
                            android:layout_height="@dimen/round_button_size"
                            android:layout_margin="@dimen/round_button_margin"
                            android:background="@drawable/basketball"
                            android:onClick="add3PointsTeam1"
                            android:text="3"
                            android:textColor="@color/buttonText"
                            android:textSize="22sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/free_Point_Button_Player1"
                        android:layout_width="@dimen/round_button_size"
                        android:layout_height="@dimen/round_button_size"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/round_button_margin"
                        android:background="@drawable/basketball"
                        android:onClick="freeThrowTeam1"
                        android:text="@string/free_throw"
                        android:textColor="@color/buttonText" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/team2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/ordinary_margin"
                        android:fontFamily="@font/arcade_italic"
                        android:gravity="center"
                        android:text="@string/team2"
                        android:textColor="@color/team2Color"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/team2_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/ordinary_margin"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/team2Score"
                        android:textSize="40sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/two_Points_Button_Player2"
                            android:layout_width="@dimen/round_button_size"
                            android:layout_height="@dimen/round_button_size"
                            android:layout_margin="@dimen/round_button_margin"
                            android:background="@drawable/basketball"
                            android:onClick="add2PointsTeam2"
                            android:text="2"
                            android:textColor="@color/buttonText"
                            android:textSize="22sp" />

                        <Button
                            android:id="@+id/three_Points_Button_Player2"
                            android:layout_width="@dimen/round_button_size"
                            android:layout_height="@dimen/round_button_size"
                            android:layout_margin="@dimen/round_button_margin"
                            android:background="@drawable/basketball"
                            android:onClick="add3PointsTeam2"
                            android:text="3"
                            android:textColor="@color/buttonText"
                            android:textSize="22sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/free_Point_Button_Player2"
                        android:layout_width="@dimen/round_button_size"
                        android:layout_height="@dimen/round_button_size"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/round_button_margin"
                        android:background="@drawable/basketball"
                        android:onClick="freeThrowTeam2"
                        android:text="@string/free_throw"
                        android:textColor="@color/buttonText" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttons_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/ordinary_margin"
                android:padding="@dimen/ordinary_margin">

                <Button
                    android:id="@+id/reset_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="#EF5350"
                    android:onClick="resetScore"
                    android:text="@string/reset_button"
                    android:textColor="@color/buttonText" />

                <Button
                    android:id="@+id/share_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:onClick="shareScore"
                    android:text="@string/share_button"
                    android:textColor="@color/buttonText" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@color/buttonText" />

</FrameLayout>
